change email auth url

--- a/src/templates/verify-email.pug
+++ b/src/templates/verify-email.pug
@@ -71,5 +71,5 @@ html(lang="ko")
                     h2 Hello!
                     h2.email=email
                 h4 Please Confirm Your Account!
-                a(href=`http://localhost:3000/confirm?code=${code}`) Click Here To Confirm
+                a(href=`https://nimble-torte-413c62.netlify.app/confirm?code=${code}`) Click Here To Confirm
                 h4 Thanks for choosing Hcast
